--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
-        Hello, world!;
-        I'm dormouse.;
+        Hello, world!
+        I'm dormouse.
     </body>
 </html>
 
